--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,19 +1,28 @@
-// import bootstrap to edit styles
-//@import "../node_modules/bootstrap/scss/bootstrap";
-
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 
 @import "../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
 
-$primary: olive;
+$primary: hsl(256, 26%, 20%);
+$secondary: hsl(216, 30%, 68%);
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/root";
 
-body {
-  color: red;
+html {
+  overflow-x: hidden;
+}
+.custom-hero {
+  min-height: 30em;
+}
+
+.alo {
+  position: absolute;
+  width: 450px;
+  height: auto;
+  right: 50px;
+  top: 50px;
 }
