--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,25 +4,44 @@
 
 // 2. Include any default variable overrides here
 
+// font-family: 'DM Serif Display', serif; //400
+// font-family: 'Karla', sans-serif; //400 700
+
 $primary: hsl(256, 26%, 20%);
-$secondary: hsl(216, 30%, 68%);
+$secondary: hsl(273, 4%, 51%);
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/root";
 
-html {
-  overflow-x: hidden;
-}
 .custom-hero {
   min-height: 30em;
 }
 
-.alo {
-  position: absolute;
-  width: 450px;
-  height: auto;
-  right: 50px;
-  top: 50px;
+h1 {
+  font-family: "DM Serif Display", serif;
+  font-size: 3.125rem; //50px
+}
+
+p {
+  font-family: "Karla", sans-serif;
+}
+
+nav {
+  a {
+    font-size: 0.875rem; //14px
+  }
+}
+
+.nav-link:hover {
+  color: hsl(270, 9%, 17%) !important;
+}
+
+@media (min-width: 992px) {
+  .custom-hero {
+    p {
+      padding-right: 50%;
+    }
+  }
 }
